--- a/Abracadabra/abracadabra_web_app/styles/scss/main.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/main.scss
@@ -11,6 +11,7 @@
 @import './components/filterButtons';
 @import './components/Login';
 @import './components/Linkstyle.scss';
+@import './components/profile';
 
 //global style
 @import "./custom";
