--- a/Abracadabra/abracadabra_web_app/styles/scss/components/NavBar.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/NavBar.scss
@@ -7,6 +7,10 @@
   }
   .navbar-nav .nav-link {
     color: $tertiary-color;
+
+    &:active {
+      color: darken($tertiary-color, 5%);
+    }
   }
   .navbar-nav .nav-link:hover,
   .navbar-dark .navbar-nav .nav-link:focus {
@@ -14,5 +18,21 @@
   }
   .navbar-nav .Nav-color {
     color: $text-color;
+  }
+}
+
+
+.navbar-dark .navbar-nav .show > .nav-link, .navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .nav-link.active {
+  color: darken($tertiary-color, 10%);
+}
+
+.dropdown-menu {
+  background-color: $special-color;
+  
+  .dropdown-item {
+    color: $tertiary-color;
+    &:hover {
+      background-color: darken($special-color, 5%);
+    }
   }
 }
