Modified the Profile page, removed a bunch of in-code styling from EditUser and added Blank Navbars

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_profile.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_profile.scss
@@ -10,3 +10,18 @@
     }
     
 }
+
+.profilePageAvatar {
+    height: 125px;
+    border-radius: 50%;
+}
+
+
+.editUserContainer {
+    background-color: $primary-color;
+
+    hr {
+        border-top: 1px solid $text-color;
+        width: 100%;
+    }
+}
