--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
@@ -2,7 +2,7 @@
   width: 40px;
   height: 40px;
   margin-right: 0.5rem;
-  border-radius: 20px;
+  border-radius: 50%;
 }
 
 .questionHead {
@@ -188,4 +188,8 @@
 
 .giveAnAnswerArrows {
   font-size: 2rem;
+}
+
+.cursorPointer {
+  cursor: pointer;
 }
