Fixed a bunch more in-line styling

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_profile.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_profile.scss
@@ -25,3 +25,10 @@
         width: 100%;
     }
 }
+
+.LoginArea {
+    hr {
+        border-top: 1px solid $text-color;
+        width: 100%;
+    }
+}
