Fixed: Top fitler button, Nav Dropdown not properly aligned, Unauthorized 401 on profile page, Question 500 error and Filter with no return data wrong message

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/NavBar.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/NavBar.scss
@@ -29,7 +29,8 @@
 
 .dropdown-menu {
   background-color: $special-color;
-  left: -120%;
+  right: 1%;
+  left: auto;
   
   .dropdown-item {
     color: $tertiary-color;
