Added posted by to question display in subjects

--- a/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
+++ b/Abracadabra/abracadabra_web_app/styles/scss/components/_question.scss
@@ -204,3 +204,11 @@
 .cursorPointer {
   cursor: pointer;
 }
+
+.questionBodyUsername {
+  color: #1ecee9;
+
+  &:hover {
+    color: #1ecee971;
+  }
+}
